--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <main>
     
 <section class="banner">
-  <h1><img src="https://cdn-icons-png.flaticon.com/512/7662/7662833.png" alt="Listek">VEGetic</h1>
+  <h1><img src="logo.png" alt="Logo VEGetic" style="max-width: 300px; width: 100%;"></h1>
 </section>
 
   </main>
