--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     }
 
     .banner-logo img {
-      max-width: 300px;
-      width: 100%;
+      width: 408px; /* 272 * 1.5 */
       height: auto;
+      max-width: 100%;
     }
 
     .products-imgs {
@@ -82,7 +82,7 @@
     @media (max-width:768px) {
       .logo { font-size: 2rem; }
       nav a { margin-left: 1rem; font-size: 1rem; }
-      .banner-logo img { max-width: 200px; }
+      .banner-logo img { width: 272px; }
     }
   </style>
 </head>
