--- a/o-nas.html
+++ b/o-nas.html
@@ -50,8 +50,9 @@
   <main>
     
 <h2>O nas</h2>
-<p>Jesteśmy VEGetic – nową marką, która powstała z miłości do natury, harmonii i świadomej pielęgnacji...</p>
-<p>Nasze produkty są ręcznie robione, 100% wegańskie, nietestowane na zwierzętach...</p>
+<p>Jesteśmy Vegetic – nową marką, która powstała z miłości do natury, harmonii i świadomej pielęgnacji. Wierzymy, że to, co najlepsze dla Twoich włosów, pochodzi z roślin – dlatego tworzymy naturalne szampony, maski i odżywki, które są nie tylko skuteczne, ale też bezpieczne dla Ciebie i planety.</p>
+<p>Dbamy nie tylko o jakość, ale i o zrównoważony rozwój. Nasze opakowania nadają się do recyklingu, a składniki pochodzą wyłącznie z etycznych źródeł.<p/>
+<p>Jesteśmy dopiero na początku drogi, ale już teraz chcemy dawać więcej – więcej naturalnej pielęgnacji, więcej równowagi i więcej szacunku dla środowiska.</p>
 
   </main>
   <footer>
