--- a/produkty.html
+++ b/produkty.html
@@ -48,7 +48,14 @@
     </nav>
   </header>
   <main>
-    
+    <h2>Nasze produkty</h2>
+    <p><strong>Nowa kolekcja dla każdego rodzaju włosów:</strong> Odkryj moc roślin dzięki naszej najnowszej wegańskiej linii do pielęgnacji włosów. Bez względu na to, czy Twoje włosy są kręcone, proste czy falowane - nasze formuły zapewniają głębokie odżywienie, siłę i połysk.</p>
+    <p><strong>Zrównoważone tworzenie:</strong> Nasze opakowania są przyjazne dla środowiska i nadają się do recyklingu, a każdy składnik pochodzi z etycznych źródeł.</p>
+    <p><strong>Dlaczego jesteśmy wyjątkowi?</strong></p>
+    <ul class="features" aria-label="Cechy produktów">
+      <li>100% wegański i nietestowany na zwierzętach</li>
+      <li>Bez siarczanów, silikonów i parabenów</li>
+    </ul>
 <h2>Nasze produkty</h2>
 <p><strong>Nowa kolekcja dla każdego rodzaju włosów</strong>...</p>
 <p><strong>Zrównoważone tworzenie</strong>...</p>
